[package]
name = "rsevents"
description = "Manual and auto reset events for signaling threads and writing new synchronization primitives like semaphores."
version = "0.3.1"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>",
		"NeoSmart Technologies <https://neosmart.net/>"]
homepage = "https://github.com/neosmart/rsevents"
repository = "https://github.com/neosmart/rsevents"
documentation = "https://docs.rs/rsevents/latest/rsevents/"
readme = "README.md"
keywords = ["synchronization", "events", "signals", "win32", "futex"]
categories = ["concurrency", "asynchronous"]
license = "MIT"
edition = "2018"

[dependencies]
parking_lot_core = "0.9.3"

[dev-dependencies]
tiny-rng = "0.2.0"
